# vimfiles

./: .bash_profile  .bashrc  .condarc  .editorconfig  .gitattributes_global  .gitconfig  .gitignore  .gitmessage.txt  .gitmodules  .gutctags  .pylintrc  GvimExt.reg  Install-Vimfiles.Tests.ps1  Install-Vimfiles.ps1  PSScriptAnalyzerSettings.psd1  README.md  _gvimrc  _vimrc  environment.yml  git_options.ini  gutctags  requirements.txt  starship.toml  winget.json  xldiff.bat
vimfiles/: coc-settings.json  gvimrc  pyproject.toml  vim-pandoc-templates  vimrc
vimfiles/UltiSnips/: bib.snippets  gitcommit.snippets  markdown.snippets  python.snippets
vimfiles/UltiSnips/vimwiki/: .gitignore
vimfiles/after/: filetype.vim
vimfiles/after/autoload/: pandoc.vim  redir.vim  vimwiki.vim
vimfiles/after/compiler/: myst.vim
vimfiles/after/ftplugin/: dosini.vim  elm.vim  make.vim  markdown.vim  pandoc.vim  powershell.vim  (+5 more)
vimfiles/autoload/: condaactivate.vim  myhelptags.vim  vim.vim
vimfiles/bundle/: vimsub.sh
vimfiles/compiler/: pandoc.vim  quickfix.vim
vimfiles/doc/: myfzf.txt  myhelp.txt  redir.txt  scratch.txt
vimfiles/ftplugin/: html.vim  jedi.vim  markdown.vim  pandoc.vim  python.vim  vimwiki.vim
vimfiles/indent/: python.vim
vimfiles/plugin/: SimpylFold.vim  ale.vim  calendar.vim  coc.vim  copilot.vim  editorconfig.vim  fontzoom.vim  fzf.vim  gutentags.vim  pandoc.vim  pandoc_md.vim  polyglot.vim  pydocstring.vim  python.vim  scratch.vim  tagbar.vim  taskwiki.vim  tex.vim  undotree.vim  vim-conda.vim  vimwiki.vim
vimfiles/spell/: en.utf-8.add  en.utf-8.add.spl
(+59 files in other folders)
