[project]
name = "vimfiles"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "mdformat-pyproject>=0.1.1",
    "mdformat-ruff>=0.1.3",
    "mdformat-shfmt>=0.2.0",
    "panvimwiki>=0.11.0",
    "pynvim>=0.6.0",
]

[tool.uv]
python-preference = "system"
# system-site-packages = true
